# dimensions

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  package-lock.json  package.json
.github/workflows/: ci.yml
apps/api/: README.md  alembic.ini  pyproject.toml
apps/api/app/: __init__.py  main.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/endpoints/: feedback.py  generation.py  jobs.py  projects.py  sites.py  variants.py
apps/api/app/core/: config.py  presets.py
apps/api/app/db/: models.py  session.py
apps/api/app/models/: entities.py
apps/api/app/repositories/: deps.py  store.py
apps/api/app/schemas/: common.py
apps/api/app/services/: context_ingestion.py  exporters.py  generation.py  geospatial.py  jobs.py  scoring.py  storage.py
apps/api/app/workers/: celery_app.py  dispatch.py  tasks.py
apps/api/dimensions_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/migrations/: env.py
apps/api/migrations/versions/: 20260304_0001_initial_schema.py
apps/api/tests/: conftest.py
apps/api/tests/integration/: test_api_flow.py
apps/api/tests/unit/: test_generation.py  test_geospatial.py  test_scoring.py
apps/web/: .eslintrc.cjs  eslint.config.js  index.html  package.json  playwright.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
apps/web/src/: App.test.tsx  App.tsx  main.tsx  styles.css
apps/web/src/api/: client.ts
apps/web/src/components/: Context3DView.tsx  DashboardSummary.tsx  HqVariantPreview.tsx  MassingWorkbench.tsx  ProjectsPanel.tsx  SiteDrawMap.tsx  (+3 more)
infra/: README.md
(+4 files in other folders)
