[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dimensions-api"
version = "0.1.0"
description = "Dimensions MVP backend API"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic==1.13.3",
  "boto3==1.35.36",
  "celery==5.4.0",
  "fastapi==0.115.0",
  "geoalchemy2==0.15.2",
  "httpx==0.27.2",
  "numpy==2.1.1",
  "psycopg[binary]==3.2.3",
  "pydantic-settings==2.5.2",
  "python-dotenv==1.0.1",
  "pyproj==3.7.1",
  "redis==5.1.1",
  "shapely==2.0.6",
  "sqlalchemy==2.0.35",
  "trimesh==4.4.9",
  "uvicorn[standard]==0.31.0",
]

[project.optional-dependencies]
dev = [
  "mypy==1.11.2",
  "pre-commit==3.8.0",
  "pytest==8.3.3",
  "pytest-asyncio==0.24.0",
  "pytest-cov==5.0.0",
  "ruff==0.6.8",
]

[tool.setuptools]
packages = ["app"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "ASYNC", "C4", "SIM"]
ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
